fixe left aligned text in navbar CTA button when hovering

--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -15,7 +15,7 @@
     overflow: hidden;
     span{
       position: relative;
-      display: block;
+      display: inline-block;
       padding: 2px 0;
       transition: transform .9s cubic-bezier(.19,1,.22,1);
       transform-origin: left center;
